--- a/bin/application.properties
+++ b/bin/application.properties
@@ -29,3 +29,10 @@ scheduling.job.cron = 0 0 * * *
 spring.datasource.hikari.connection-timeout=60000
 # max 5
 spring.datasource.hikari.maximum-pool-size=5
+
+
+  ibm.mq.queueManager=QM1
+  ibm.mq.channel=DEV.ADMIN.SVRCONN
+  ibm.mq.connName=localhost(1414)
+  ibm.mq.user=admin
+  ibm.mq.password=passw0rd
