--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,10 @@ dependencies {
 	//compile group: 'org.springframework.boot', name: 'spring-boot-starter-batch'
 	//compile group: 'org.hsqldb', name: 'hsqldb', version: '2.0.0'
 	//compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '6.1.0.jre7'
-    //compile group: 'com.microsoft.sqlserver', name: 'sqljdbc4', version: '4.0'
+   // testCompile group: 'com.microsoft.sqlserver', name: 'sqljdbc4', version: '4.0'
+   // https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc
+ // compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '6.1.0.jre8'
+   
     testCompile("org.springframework.boot:spring-boot-starter-test")
     compile("org.springframework.boot:spring-boot-starter-activemq")
     compile("org.apache.activemq:activemq-broker")
