--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,18 @@ logging.file=application.log
 spring.batch.initializer.enabled=false
 spring.batch.initialize-schema=never
 #spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=test
+#spring.datasource.username=DESKTOP-0IBRBFT\reddy
+#spring.datasource.password=1233
+#spring.datasource.first.driverclassname =com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://DESKTOP-0IBRBFT:1433;databaseName:test
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverclassname = com.mysql.jdbc.Driver 
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+#DESKTOP-0IBRBFT\SQLEXPRESS (DESKTOP-0IBRBFT\
 
 #run every night at (0 23 * * *) (mid night at 23 hours  )
 #run every night at 12 am (0 0 * * *) 
@@ -33,6 +40,6 @@ spring.datasource.hikari.maximum-pool-size=5
 
   ibm.mq.queueManager=QM1
   ibm.mq.channel=DEV.ADMIN.SVRCONN
-  ibm.mq.connName=localhost(1414)
+  ibm.mq.connName=0.0.0.0(1414)
   ibm.mq.user=admin
   ibm.mq.password=passw0rd
