--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,12 @@ spring.batch.initializer.enabled=false
 spring.batch.initialize-schema=never
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=test
-#spring.datasource.username=DESKTOP-0IBRBFT\reddy
+#spring.datasource.username=sa
 #spring.datasource.password=1233
-#spring.datasource.first.driverclassname =com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://DESKTOP-0IBRBFT:1433;databaseName:test
+#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.jpa.hibernate.ddl-auto = create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=root
